chore: add back example to omni path

--- a/.omni.yaml
+++ b/.omni.yaml
@@ -3,6 +3,10 @@ up:
   - github-release:
       golangci/golangci-lint: 1.60.1
 
+path:
+  append__toappend:
+    - example
+
 commands:
   test:
     desc: Run all tests
