--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,7 +56,10 @@ jobs:
           files_yaml: |
             source_code:
               go.mod
+              go.sum
               *.go
+              cmd/**/*.go
+              internal/**/*.go
               .github/workflows/build.yaml
 
       - name: Identify if testing is required
