--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -240,5 +240,5 @@ jobs:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           distribution: goreleaser
-          version: latest
+          version: "~> v2"
           args: release --clean
