--- a/.github/workflows/release-next.yaml
+++ b/.github/workflows/release-next.yaml
@@ -72,14 +72,14 @@ jobs:
           base_sha: ${{ env.PREVIOUS_TAG_SHA }}
           files_yaml: |
             source_code:
-              go.mod
-              go.sum
-              *.go
-              !*_test.go
-              cmd/**/*.go
-              !cmd/**/*_test.go
-              internal/**/*.go
-              !internal/**/*_test.go
+              - 'go.mod'
+              - 'go.sum'
+              - '*.go'
+              - '!*_test.go'
+              - 'cmd/**/*.go'
+              - '!cmd/**/*_test.go'
+              - 'internal/**/*.go'
+              - '!internal/**/*_test.go'
 
       - name: Check if a new release would be required
         env:
