--- a/.github/workflows/release-next.yaml
+++ b/.github/workflows/release-next.yaml
@@ -38,7 +38,7 @@ jobs:
         run: |
           set -e
 
-          last_release_tag=$(gh --repo "${REPOSITORY}" release list --limit 1 --json tagName | jq -r '.[0].tagName')
+          last_release_tag=$(gh --repo "${REPOSITORY}" release list --exclude-drafts --limit 1 --json tagName | jq -r '.[0].tagName')
           if [[ "$last_release_tag" != "null" ]]; then
             previous_tag_data=$(gh api "repos/${REPOSITORY}/git/ref/tags/${last_release_tag}")
             previous_tag_object_type=$(echo "$previous_tag_data" | jq -r '.object.type')
