--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -204,7 +204,7 @@ jobs:
 
 
   publish-binaries:
-    name: Publish Binaries
+    name: Publish binaries
     runs-on: ubuntu-latest
     needs:
       - push-release
