--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,19 +48,20 @@ jobs:
         uses: "actions/checkout@v4"
         if: ${{ env.REQUIRES_TESTS != 'true' }}
 
-      - name: Get the changed files that would require tests
+      - name: Get the changed files
         id: changed-files
-        uses: "tj-actions/changed-files@v45"
         if: ${{ env.REQUIRES_TESTS != 'true' }}
-        with:
-          files_yaml: |
-            source_code:
-              - 'go.mod'
-              - 'go.sum'
-              - '*.go'
-              - 'cmd/**/*.go'
-              - 'internal/**/*.go'
-              - '.github/workflows/build.yaml'
+        env:
+          BASE_SHA: ${{ github.event.pull_request.base.sha || 'HEAD^' }}
+          MODIFIED_FILES_SOURCE_CODE: |
+            go.mod
+            go.sum
+            *.go
+            cmd/**/*.go
+            internal/**/*.go
+            .github/workflows/build.yaml
+        run: |
+          .github/scripts/get-changed-files.sh
 
       - name: Identify if testing is required
         if: ${{ env.REQUIRES_TESTS != 'true' }}
